# cv

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/: config.py  main.py  server.py
backend/src/database/: __init__.py  client.py  passkey.py  session.py
backend/src/utils/: base_config.py
conf.d/: default.conf
web/: Dockerfile  biome.json  next.config.ts  package-lock.json  package.json
web/src/app/: current-acitivity.tsx  layout.tsx  page.tsx
web/src/app/grades/: data.ts  page.tsx  subject.tsx  subjects.tsx
web/src/app/schedule/: page.tsx
web/src/components/: Aurora.tsx  theme-manager.tsx
web/src/components/nav/: bottom-bar.tsx
web/src/components/ui/: accordion.tsx  button.tsx  carousel.tsx  progress.tsx  theme-provider.tsx
web/src/features/: subjects.ts  timetable.ts
web/src/hooks/: useClientOnce.tsx  useLesson.tsx  useNow.tsx
web/src/lib/: utils.ts
web/src/lib/api/: base.ts
web/src/providers/: swr.tsx  telegram.tsx
